frame/support/test/tests/construct_runtime_ui/invalid_token_after_module.stderr
error: Unexpected tokens, expected one of `::$ident` `::{`, `exclude_parts`, `use_parts`, `=`, `,`
 --> tests/construct_runtime_ui/invalid_token_after_module.rs:6:18
  |
6 |         system: System ?
  |                        ^
